--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "node server.js",
-      "seed": "node seeds/seed.js"
+      "seed": "node seeds/seed.js",
+      "watch": "nodemon server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "devDependencies": {
+      "nodemon": "^2.0.22"
+    },
     "dependencies": {
       "bcrypt": "^5.0.0",
       "connect-session-sequelize": "^7.0.4",
